--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ HELP.md
 .gradle/
 build/
 studay_server.iml
-src/main/resources/application.yaml
+*.yaml
 
 ### Intellij+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
