--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -36,6 +36,7 @@ jobs:
 
       - name: Create application.yml
         run: |
+          mkdir -p src/main/resources
           echo "${{ secrets.APPLICATION_YML_CONTENT }}" > src/main/resources/application.yml
           echo "${{ secrets.APPLICATION_YML_CONTENT }}" > src/main/resources/application-dev.yml
           echo "${{ secrets.APPLICATION_YML_CONTENT }}" > src/main/resources/application-oauth.yml
