--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -38,8 +38,8 @@ jobs:
         run: |
           mkdir -p src/main/resources
           echo "${{ secrets.APPLICATION_YML_CONTENT }}" > src/main/resources/application.yml
-          echo "${{ secrets.APPLICATION_YML_CONTENT }}" > src/main/resources/application-dev.yml
-          echo "${{ secrets.APPLICATION_YML_CONTENT }}" > src/main/resources/application-oauth.yml
+          echo "${{ secrets.APPLICATION_DEV_YML_CONTENT }}" > src/main/resources/application-dev.yml
+          echo "${{ secrets.APPLICATION_OAUTH_YML_CONTENT }}" > src/main/resources/application-oauth.yml
       - name: Build with gradle
         run: ./gradlew build
 
