--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -20,6 +20,16 @@ jobs:
     # GitHub Actions 러너의 운영 체제
     runs-on: ubuntu-latest
 
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ROOT_PASSWORD: password
+          MYSQL_DATABASE: test
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=10
+
     # 순차적으로 실행될 단계들을 정의하는 섹션
     steps:
       - name: Checkout code
@@ -37,6 +47,7 @@ jobs:
       - name: Create application.yml
         run: |
           mkdir -p src/main/resources
+          echo "${{ secrets.APPLICATION_TEST_YML_CONTENT }}" > src/test/resources/application-test.yml
           echo "${{ secrets.APPLICATION_YML_CONTENT }}" > src/main/resources/application.yml
           echo "${{ secrets.APPLICATION_DEV_YML_CONTENT }}" > src/main/resources/application-dev.yml
           echo "${{ secrets.APPLICATION_OAUTH_YML_CONTENT }}" > src/main/resources/application-oauth.yml
