--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -47,6 +47,7 @@ jobs:
       - name: Create application.yml
         run: |
           mkdir -p src/main/resources
+          mkdir -p src/test/resources
           echo "${{ secrets.APPLICATION_TEST_YML_CONTENT }}" > src/test/resources/application-test.yml
           echo "${{ secrets.APPLICATION_YML_CONTENT }}" > src/main/resources/application.yml
           echo "${{ secrets.APPLICATION_DEV_YML_CONTENT }}" > src/main/resources/application-dev.yml
