--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,29 @@
+import org.hidetake.gradle.swagger.generator.GenerateSwaggerUI
+import org.springframework.boot.gradle.tasks.bundling.BootJar
+
+buildscript {
+    ext {
+        restdocsApiSpecVersion = '0.16.2'
+    }
+}
+
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.5'
     id 'io.spring.dependency-management' version '1.1.3'
-    id 'org.asciidoctor.jvm.convert' version '3.3.2'
+
+    id 'org.hidetake.swagger.generator' version '2.18.2'
+
+    //restdocs-api-spec → restdocs extension  포함함
+    id 'com.epages.restdocs-api-spec' version "${restdocsApiSpecVersion}"
+
+}
+
+// 3.2. swaggerSources 설정 추가
+swaggerSources {
+    sample {
+        setInputFile(file("build/api-spec/openapi3.yml"))
+    }
 }
 
 group = 'org.guzzing'
@@ -12,18 +33,17 @@ java {
     sourceCompatibility = '17'
 }
 
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
+openapi3 {
+    setServer("http://localhost:8080") // API 요청을 보낼 서버 주소 설정
+    title = "restdocs-swagger API Documentation" // API 문서 제목
+    description = "Spring REST Docs with SwaggerUI." // API 문서 설명
+    version = "0.0.1" // API 문서 버전
+    format = "yml" // API 문서 출력 포맷 (default = JSON)
 }
+
 
 repositories {
     mavenCentral()
-}
-
-ext {
-    set('snippetsDir', file("build/generated-snippets"))
 }
 
 dependencies {
@@ -35,14 +55,44 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+
+    //spring rest docs
+    testImplementation "com.epages:restdocs-api-spec-restassured:${restdocsApiSpecVersion}"
+    testImplementation 'io.rest-assured:rest-assured'
+
+    //swagger
+    swaggerUI 'org.webjars:swagger-ui:4.11.1'
 }
 
+tasks.withType(GenerateSwaggerUI) {
+    dependsOn 'openapi3'
+}
+
+ // GenerateSwaggerUI 태스크가, openapi3 task 를 의존하도록 설정
+ tasks.withType(GenerateSwaggerUI) {
+             dependsOn 'openapi3'
+}
+
+// 3.4.2
+// 생성된 SwaggerUI 를 jar 에 포함시키기 위해 build/resources 경로로 로 복사
+ tasks.register('copySwaggerUI', Copy) {
+      dependsOn 'generateSwaggerUISample'
+
+        def generateSwaggerUISampleTask = tasks.named('generateSwaggerUISample', GenerateSwaggerUI).get()
+
+         from("${generateSwaggerUISampleTask.outputDir}")
+           into("./build/resources/main/static/docs")
+}
+
+// 3.4.3
+// bootJar 실행 전, copySwaggerUI 를 실행하도록 설정
+tasks.withType(BootJar) {
+    dependsOn 'copySwaggerUI'
+ }
+
 tasks.named('test') {
-    outputs.dir snippetsDir
     useJUnitPlatform()
 }
 
-tasks.named('asciidoctor') {
-    inputs.dir snippetsDir
-    dependsOn test
-}
+
+
