--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -1,9 +1,9 @@
 name: Build and Deploy to EC2
 on:
   push:
-    branches: [ “develop” ]
+    branches: [ "develop" ]
   pull_request:
-    branches: [ “develop” ]
+    branches: [ "develop" ]
   workflow_dispatch:
 env:
   BUCKET_NAME: team09-cicd-bucket
@@ -23,7 +23,7 @@ jobs:
           MYSQL_DATABASE: test
         ports:
           - 3306:3306
-        options: --health-cmd=“mysqladmin ping” --health-interval=10s --health-timeout=5s --health-retries=10
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=10
       redis:
         image: redis
         ports:
@@ -43,8 +43,8 @@ jobs:
       - name: Create application.yml
         run: |
           mkdir -p src/main/resources
-          echo “${{ secrets.APPLICATION_YML_CONTENT }}” > src/main/resources/application.yml
-          echo “${{ secrets.APPLICATION_DEV_YML_CONTENT }}” > src/main/resources/application-dev.yml
-          echo “${{ secrets.APPLICATION_OAUTH_YML_CONTENT }}” > src/main/resources/application-oauth.yml
+          echo "${{ secrets.APPLICATION_YML_CONTENT }}" > src/main/resources/application.yml
+          echo "${{ secrets.APPLICATION_DEV_YML_CONTENT }}" > src/main/resources/application-dev.yml
+          echo "${{ secrets.APPLICATION_OAUTH_YML_CONTENT }}" > src/main/resources/application-oauth.yml
       - name: Build with gradle
         run: ./gradlew build
