--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -36,8 +36,8 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3.13.0
         with:
-          java-version: ‘17’
-          distribution: ‘corretto’
+          java-version: '17'
+          distribution: 'corretto'
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
       - name: Create application.yml
