--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,9 @@ dependencies {
     implementation group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
     implementation group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
 
+    // spatial type
+    implementation 'org.hibernate:hibernate-spatial:6.3.1.Final'
+
 }
 tasks.named('test') {
     useJUnitPlatform()
