--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ HELP.md
 build/
 studay_server.iml
 src/main/resources/*.yml
+src/test/resources/*.yml
 
 ### Intellij+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
