--- a/build.gradle
+++ b/build.gradle
@@ -9,11 +9,6 @@ plugins {
     id 'org.springframework.boot' version '3.1.5'
     id 'io.spring.dependency-management' version '1.1.3'
 
-    id 'org.hidetake.swagger.generator' version '2.18.2'
-
-    //restdocs-api-spec → restdocs extension  포함함
-    id 'com.epages.restdocs-api-spec' version "${restdocsApiSpecVersion}"
-
 }
 
 group = 'org.guzzing'
@@ -28,21 +23,33 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'com.mysql:mysql-connector-j'
-    annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // QueryDSL
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+    // JPA
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    // Lombok
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
+    // Validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    // MySQL
+    runtimeOnly 'com.mysql:mysql-connector-j'
+
+    // RestDocs
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 
     //spring rest docs
     testImplementation "com.epages:restdocs-api-spec-restassured:${restdocsApiSpecVersion}"
-    testImplementation 'io.rest-assured:rest-assured'
-
-    //swagger
-    swaggerUI 'org.webjars:swagger-ui:4.11.1'
 
     //redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
@@ -64,6 +71,7 @@ dependencies {
     implementation 'org.hibernate:hibernate-spatial:6.3.1.Final'
 
 }
+
 tasks.named('test') {
     useJUnitPlatform()
 }
