--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -35,11 +35,13 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4.1.1
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3.13.0
         with:
           java-version: '17'
           distribution: 'corretto'
+
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
 
@@ -59,3 +61,6 @@ jobs:
 
       - name: Build with gradle
         run: ./gradlew build
+
+      - name: Openapi3 Documentation
+        run: ./gradlew openapi3
