--- a/build.gradle
+++ b/build.gradle
@@ -102,6 +102,12 @@ dependencies {
     // spatial type
     implementation 'org.hibernate:hibernate-spatial:6.3.1.Final'
 
+    // Spring cache
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache', version: '3.2.0'
+
+    // Caffeine
+    implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.1.8'
+
 }
 
 tasks.named('test') {
