--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -55,6 +55,7 @@ jobs:
           echo "${{ secrets.APPLICATION_AUTH_YML_CONTENT }}" > src/main/resources/application-auth.yml
           echo "${{ secrets.APPLICATION_S3_YML_CONTENT }}" > src/main/resources/application-s3.yml
           echo "${{ secrets.APPLICATION_SWAGGER_YML_CONTENT }}" > src/main/resources/application-swagger.yml
+          echo "${{ secrets.APPLICATION_MONITORING_YML_CONTENT }}" > src/main/resources/application-monitoring.yml
 
       - name: Clean with gradle
         run: ./gradlew clean
