--- a/build.gradle
+++ b/build.gradle
@@ -87,6 +87,9 @@ dependencies {
     // Swagger UI
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
+    // Redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
     // Webflux
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
