--- a/appspec.yml
+++ b/appspec.yml
@@ -4,17 +4,13 @@ os: linux
 files:
   - source: /
     destination: /home/ubuntu/studay
+    overwrite: yes
 
 permissions:
   - object: /home/ubuntu/studay/
     owner: ubuntu
     group: ubuntu
 hooks:
-  BeforeInstall:
-    - location: scripts/deploy.sh
-      timeout: 300
-      runas: root
-
   AfterInstall:
     - location: scripts/deploy.sh
       timeout: 60
