--- a/.github/workflows/develop-cicd.yml
+++ b/.github/workflows/develop-cicd.yml
@@ -41,6 +41,11 @@ jobs:
       - name: Create application.yml
         run: |
           mkdir -p src/main/resources
+          mkdir -p src/test/resources
+          
+          echo "${{ secrets.APPLICATION_TEST_YML_CONTENT }}" > src/test/resources/application.yml
+          echo "${{ secrets.APPLICATION_DEV_YML_CONTENT }}" > src/test/resources/application-dev.yml
+          echo "${{ secrets.APPLICATION_AUTH_YML_CONTENT }}" > src/test/resources/application-auth.yml
           
           echo "${{ secrets.APPLICATION_YML_CONTENT }}" > src/main/resources/application.yml
           echo "${{ secrets.APPLICATION_DEV_YML_CONTENT }}" > src/main/resources/application-dev.yml
