--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -28,12 +28,14 @@ jobs:
 
     # 순차적으로 실행될 단계들을 정의하는 섹션
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4.1.1
+
       - name: Set up JDK 17
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v3.13.0
         with:
           java-version: '17'
-          distribution: 'temurin'
+          distribution: 'corretto'
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
@@ -41,13 +43,9 @@ jobs:
       - name: Create application.yml
         run: |
           mkdir -p src/main/resources
-          mkdir -p src/test/resources
-          
-          echo "${{ secrets.APPLICATION_TEST_YML_CONTENT }}" > src/test/resources/application.yml
-          echo "${{ secrets.APPLICATION_DEV_YML_CONTENT }}" > src/test/resources/application-dev.yml
-          echo "${{ secrets.APPLICATION_AUTH_YML_CONTENT }}" > src/test/resources/application-auth.yml
           
           echo "${{ secrets.APPLICATION_YML_CONTENT }}" > src/main/resources/application.yml
+          echo "${{ secrets.APPLICATION_DEV_YML_CONTENT }}" > src/main/resources/application-dev.yml
           echo "${{ secrets.APPLICATION_PROD_YML_CONTENT }}" > src/main/resources/application-prod.yml
           echo "${{ secrets.APPLICATION_AUTH_YML_CONTENT }}" > src/main/resources/application-auth.yml
           echo "${{ secrets.APPLICATION_MONITORING_YML_CONTENT }}" > src/main/resources/application-monitoring.yml
