--- a/.github/workflows/develop-cicd.yml
+++ b/.github/workflows/develop-cicd.yml
@@ -6,10 +6,10 @@ on:
   workflow_dispatch:
 
 env:
-  BUCKET_NAME: team09-cicd-bucket
+  BUCKET_NAME: studay-cicd-bucket
   PROJECT_NAME: studay
-  DEPLOYMENT_GROUP_NAME: studay_cicd
-  CODE_DEPLOY_APP_NAME: studay_cicd
+  DEPLOYMENT_GROUP_NAME: delpoy-group
+  CODE_DEPLOY_APP_NAME: studay-codedeploy
 jobs:
   # 작업의 이름
   build_and_test:
@@ -68,10 +68,10 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_PRIVATE_ACCESS_KEY }}
-          aws-region: ap-northeast-1
+          aws-region: ap-northeast-2
 
       - name: Upload to S3
-        run: aws s3 cp --region ap-northeast-1 ./$GITHUB_SHA.zip s3://$BUCKET_NAME/$PROJECT_NAME/$GITHUB_SHA.zip
+        run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://$BUCKET_NAME/$PROJECT_NAME/$GITHUB_SHA.zip
 
       - name: Code Deploy To EC2 instance
         run: aws deploy create-deployment
